# grafana-agent-operator

./: .gitignore  .jujuignore  .wokeignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft-22.04.yaml  charmcraft-24.04.patch  charmcraft-24.04.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pull-request.yaml  quality-gates.yaml  release.yaml
probes/: README.md  subordinate_limit.py
probes/bundle/: probe_bundle.py
probes/status/: probe_status.py
prometheus_alert_rules/: juju_TestUpdateStatus_0f77a9cc_grafana-agent.rules
src/: charm.py  grafana_agent.py  snap_management.py
src/grafana_dashboards/: grafana-agent-node-exporter-quickstart_rev2.json
src/loki_alert_rules/: high_error_rate.rule
src/prometheus_alert_rules/: disk.rules  flapping.rules  high_cpu_iowait.rule  host_health.rules  memory.rules  oomkill.rule  oomkill.rules
templates/: snap_installation.yaml
terraform/: README.md  main.tf  outputs.tf  terraform.tf  versions.tf
tests/integration/: conftest.py  test_classic_config_flag.py  test_juju_info.py  test_juju_info_cos_agent.py
tests/manual/smoke/: README.md  amd64.yaml  arm64.yaml
tests/scenario/: conftest.py  helpers.py  test_alert_labels.py  test_config.py  test_cos_agent_e2e.py  test_disable_alerts.py  test_models.py  test_multiple_subordinates.py  test_peer_relation.py  test_relation_priority.py  test_scrape_configs.py  test_setup_statuses.py  test_start_statuses.py  test_tracing_configuration.py
tests/scenario/test_machine_charm/: conftest.py  test_alert_labels.py  test_config.py  test_cos_agent_e2e.py  test_models.py  test_multiple_subordinates.py  test_peer_relation.py  test_relation_priority.py  test_scrape_configs.py  test_tracing_configuration.py
tests/unit/: conftest.py  test_alert_labels.py  test_cert_transfer.py  test_cloud_integration.py  test_cos_agent_e2e.py  test_disable_alerts.py  test_fstab_parsing.py  test_models.py  test_multiple_subordinates.py  test_peer_relation.py  test_relation_priority.py  test_relation_status.py  test_scrape_configs.py  test_snap_management.py  test_tracing_configuration.py  test_update_status.py
tests/unit/assets/: snap_manifest.yaml
(+8 files in other folders)
