# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "grafana-agent"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "cosl >= 0.0.50",
  "ops > 2.5.0, < 3",
  "pydantic < 2",
  "requests",
  "cryptography", # Pin prevents an error in the wheels due to crypto package moving to openssl 3.2.1
  "jsonschema", # Pin prevents the machine charm error "ModuleNotFoundError: No module named 'rpds.rpds'"
  # lib/charms/tempo_k8s/v1/charm_tracing
  "opentelemetry-exporter-otlp-proto-http>=1.21.0",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "responses",
  "cosl",
  "pydantic",
  "ops[testing]",
  "fs",
  # Integration
  "aiohttp",
  "asyncstdlib",
  "juju ~= 3.3.0", # libjuju needs to track the juju version
  "websockets<14.0", # https://github.com/juju/python-libjuju/issues/1184 (fixed in juju 3.5.2.1)
  "pytest", # trying to remove the pinning TODO: remove this comment
  "prometheus-api-client",  # TODO: ideally remove this
  "pytest-operator",
  "sh",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Linting tools configuration
[tool.ruff]
line-length = 99
exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# Ignore D107 Missing docstring in __init__
ignore = ["C901", "D107", "E501", "RET504"]

[tool.ruff.lint.per-file-ignores]
# D100, D101, D102, D103: Ignore missing docstrings in tests
"tests/*" = ["D100","D101","D102","D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Static analysis tools configuration
[tool.pyright]
extraPaths = ["src", "lib"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic" # we'll work up to strict
reportIncompatibleMethodOverride = false
reportImportCycles = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"
